--- a/AndBible/res/values-ar/strings.xml
+++ b/AndBible/res/values-ar/strings.xml
@@ -11,22 +11,22 @@
     <string name="splash_top_text">"\n\"و قال الله ليكن نور فكان نور.\"\nتكوين 1:3"</string>
     <string name="help_text">"إضغط على زر \"القائمة\" \nتستطيع التنقل بين الإصحاحات (التالي أو السابق) عن طريق التراك بول، دي باد، بلمس الشاشة باصبعك يمينا او يسارا"</string>
     <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu. The list of existing notes can be accessed via the main menu. \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
-    <string name="version_text">Version %s</string>
-    <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
+    <string name="version_text">إصدار %s</string>
+    <string name="no_sdcard_error">"برجاء وضع شريحة الذاكرة و إعادة تشغيل البرنامج"</string>
 
     <!-- main menu -->
-    <string name="chooseBook">Document</string>
-    <string name="selectPassage">Passage</string>
-    <string name="search">Find</string>
-    <string name="settings">Settings</string>
-    <string name="history">History</string>
-    <string name="speak">Speak</string>
-    <string name="help">Help</string>
+    <string name="chooseBook">إختار المستند</string>
+    <string name="selectPassage">مرور</string>
+    <string name="search">إبحث</string>
+    <string name="settings">إعدادات</string>
+    <string name="history">تاريخ</string>
+    <string name="speak">تكلم</string>
+    <string name="help">مساعدة</string>
 
     <!-- Passage navigation -->
-    <string name="choosePassageBookName">Choose Book</string>
-    <string name="choosePassageChapterName">Choose Chapter</string>
-    <string name="choosePassageVerseName">Choose Verse</string>
+    <string name="choosePassageBookName">"إختر سفر"</string>
+    <string name="choosePassageChapterName">إختر إصحاح</string>
+    <string name="choosePassageVerseName">إختر آية</string>
 
     <!--  Search -->
     <string name="search_index">Search Index</string>
@@ -221,14 +221,14 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="save">Save</string>
-    <string name="error">"Error "</string>
-    <string name="more">More</string>
-    <string name="retry">Try Again</string>
-    <string name="please_wait">Please wait...</string>
-    <string name="all">All</string>
+    <string name="error">"خطأ"</string>
+    <string name="more">المزيد</string>
+    <string name="retry">حاول مرة أخرى</string>
+    <string name="please_wait">برجاء الإنتظار</string>
+    <string name="all">الكل</string>
     
     <!-- Errors -->
-    <string name="error_occurred">An error has occurred</string>
+    <string name="error_occurred">حدث خطأ ما</string>
     <string name="error_no_content">No content for selected verse</string>
     <string name="error_page_too_large">Page is too large to be loaded</string>
     <string name="error_key_not_in_document">Not found in document</string>
