--- a/AndBible/res/values-it/strings.xml
+++ b/AndBible/res/values-it/strings.xml
@@ -6,31 +6,31 @@
       The copyright to this program is held by it's author.
 -->
 <resources>
-    <string name="app_name">And Bible</string>
+    <string name="app_name">And Bibbia</string>
     <!-- Startup & Help -->
-    <string name="splash_top_text">"\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3"</string>
-    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
-    <string name="help_text_long">"<b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger \nDouble-tap toggles Fullscreen on/off. \n\n<b>Menu</b> \nPress the MENU key for actions \n\nTo download more documents press Menu/More/Download Documents \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu. The list of existing notes can be accessed via the main menu. \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu. The Bookmark Manager is accessed via the main menu. The Bookmark Manager context menu allows bookmarks to be grouped using labels. \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details) \n\n<b>Context Menus</b> \nLong press on the bible view to open the context menu for actions affecting the current verse. \nLong press on a document in the document selector to delete it or view information. \nLong press the Back button to access the History list "</string>
-    <string name="version_text">Version %s</string>
-    <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
+    <string name="splash_top_text">"\n\'E Dio disse:\"Sia luce!\" e la luce comparve\'\nGenesi 1:3"</string>
+    <string name="help_text">Clicca il tasto \'MENU\' per continuare\n\nUsa la \'track-ball\', \'D-pad\' o muovi il dito sullo schermo per andare al capitolo successivo o tornare a quello precedente</string>
+    <string name="help_text_long">"<b>Navigazione</b>\nUsa la \'track-ball\', \'D-pad\' o muovi il dito sullo schermo per procedere al capitolo successivo o tornare a quello precedente\nClicca due volte per azionare o spegnere lo schermo intero. \n\n<b>Menu</b> \nClicca il tasto \'MENU\' per continuare \n\nPer scaricare altri documenti clicca il tasto MENU/ALTRO/SCARICA DOCUMENTI \n\n<b>Audio</b>\nClicca \'AUDIO\' per ascoltare un dialogo o iniziare/completare la lettura \n\n<b>I Miei Appunti</b>\nUsa il Menu \'I Miei Appunti\' per aggiungere appunti sul significato di ogni verso. Puoi accedere alla lista degli appunti attraverso il menu principale. \n\n<b>Segnalibri</b>\nPuoi aggiungere dei segnalibri attraverso il menu del contenuto dei versi. Puoi accedere al \'Manager dei Segnalibri\' attraverso il menu principale. Il menu del contesto del \'Manager dei Segnalibri\' permette di raggruppare tutti i segnalibri con l\'uso di etichette. \n\n<b>Ricerca</b>\nIl testo della Ricerca include caratteri come *, ?, E, O, NON (vedi \"Apache Lucene - Query Parser Syntax\" per ulteriori dettagli) \n\n<b>I Menu del Contenuto</b> \nPremi a lungo sullo schermo della Bibbia per aprire il menu del contesto per azioni che si riferiscono al verso in questione. \nPremi a lungo su un documento nella selezione dei documenti per cancellare o vedere informazioni. \nLong press the Back button to access the History list "</string>
+    <string name="version_text">Versione %s</string>
+    <string name="no_sdcard_error">Inserisci una carta SD e inizia la Bibbia di nuovo.</string>
 
     <!-- main menu -->
-    <string name="chooseBook">Document</string>
-    <string name="selectPassage">Passage</string>
-    <string name="search">Find</string>
-    <string name="settings">Settings</string>
-    <string name="history">History</string>
-    <string name="speak">Speak</string>
-    <string name="help">Help</string>
+    <string name="chooseBook">Documento</string>
+    <string name="selectPassage">Passaggio</string>
+    <string name="search">Trova</string>
+    <string name="settings">Impostazioni</string>
+    <string name="history">Storia</string>
+    <string name="speak">Parla/Audio</string>
+    <string name="help">Supporto</string>
 
     <!-- Passage navigation -->
-    <string name="choosePassageBookName">Choose Book</string>
-    <string name="choosePassageChapterName">Choose Chapter</string>
-    <string name="choosePassageVerseName">Choose Verse</string>
+    <string name="choosePassageBookName">Scegli un libro</string>
+    <string name="choosePassageChapterName">Scegli un capitolo</string>
+    <string name="choosePassageVerseName">Scegli un verso</string>
 
     <!--  Search -->
-    <string name="search_index">Search Index</string>
-    <string name="index_creation_required">"An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n"</string>
+    <string name="search_index">Indice di Ricerca</string>
+    <string name="index_creation_required">"Per fare una ricerca usa un indice.\n\nGli indici possono essere scaricati da Internet o creati localmente.\n\nLo scaricamento e\' piu\' veloce e gli indici scaricati hanno piu\' elementi.\n\nE\' necessaria la connessione ad Internet per scaricare gli indici."</string>
     <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
     <string name="index">Index</string>
     <string name="index_download">Download</string>
