--- a/AndBible/res/values-et/strings.xml
+++ b/AndBible/res/values-et/strings.xml
@@ -4,7 +4,7 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Ja Jumal ütles: \'Saagu valgus\' ja valgus sai.\"\n1. Moosese 1:3</string>
   <string name="help_text">Vajuta tegevuste jaoks MENÜÜ nuppu\n\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega</string>
-  <string name="help_text_long"><b>Navigeerimine</b>\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega\n    \nTopeltvajutus lülitav sisse/välja täisekraani vaate.\n    \n\n<b>Menüü</b>\n    \nVajuta tegevuste jaoks MENÜÜ nuppu\n    \n\nRohkemate dokumentide allalaadimiseks vajuta Menüü/Veel/Lae dokumente alla\n    \n\n<b>Kõne</b>\nVajuta Räägi, et näha lugemise alustamise või lõpetamise dialoogi\n    \n\n<b>Minu märkmed</b>\nMärkmeid võib lisada läbi Minu märkmete menüü või salmi kontekstimenüüst.  Olemasolevaid märkmetele saab ligi läbi peamenüü.\n    \n\n<b>Järjehoidjad</b>\nJärjehoidjaid saab lisada läbi salmi kontekstimenüü. Järjehoidjate haldajale saab ligi läbi peamenüü. Järjehoidjate haldaja kontekstimenüü võimaldab järjehoidjaid grupeerida kasutades silte.\n    \n\n<b>Otsi</b>\nOtsingus võivad olla ka erimärgid nagu *, ?, AND, OR, NOT (vaata lisainfot \"Apache Lucene - Query Parser Syntax\")\n    \n\n<b>Kontektimenüüd</b>\n    \nPikk vajutus Piibli vaates avab kontekstimenüü konkreetse salmiga seotud tegevustega.\n    \nPikk vajutus dokumendil, et kustutada või vaadata selle infot.\n    \nPikk vajutus tagasi nupul viib ajaloo nimekirja\n    </string>
+  <string name="help_text_long"><b>Navigeerimine</b>\nMine järgmisele või eelmisele peatükkidele kasutades juhtkuuli, noole nuppe või viibates ekraanil sõrmega\n    \nTopeltvajutus lülitav sisse/välja täisekraani vaate.\n    \n\n<b>Menüü</b>\n    \nVajuta tegevuste jaoks MENÜÜ nuppu\n    \n\nRohkemate dokumentide allalaadimiseks vajuta Menüü/Veel/Lae dokumente alla\n    \n\n<b>Kõne</b>\nVajuta Loe ette, et näha lugemise alustamise või lõpetamise dialoogi\n    \n\n<b>Minu märkmed</b>\nMärkmeid võib lisada läbi Minu märkmete menüü või salmi kontekstimenüüst.  Olemasolevaid märkmetele saab ligi läbi peamenüü.\n    \n\n<b>Järjehoidjad</b>\nJärjehoidjaid saab lisada läbi salmi kontekstimenüü. Järjehoidjate haldajale saab ligi läbi peamenüü. Järjehoidjate haldaja kontekstimenüü võimaldab järjehoidjaid grupeerida kasutades silte.\n    \n\n<b>Otsi</b>\nOtsingus võivad olla ka erimärgid nagu *, ?, AND, OR, NOT (vaata lisainfot \"Apache Lucene - Query Parser Syntax\")\n    \n\n<b>Kontektimenüüd</b>\n    \nPikk vajutus Piibli vaates avab kontekstimenüü konkreetse salmiga seotud tegevustega.\n    \nPikk vajutus dokumendil, et kustutada või vaadata selle infot.\n    \nPikk vajutus tagasi nupul viib ajaloo nimekirja\n    </string>
   <string name="version_text">Versioon %s</string>
   <string name="no_sdcard_error">Palun sisesta SD-kaart ja käivita AND Bible uuesti.</string>
   <!--main menu-->
@@ -13,7 +13,7 @@
   <string name="search">Leia</string>
   <string name="settings">Seaded</string>
   <string name="history">Ajalugu</string>
-  <string name="speak">Räägi</string>
+  <string name="speak">Loe ette</string>
   <string name="help">Abiinfo</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Vali raamat</string>
@@ -21,7 +21,7 @@
   <string name="choosePassageVerseName">Vali salm</string>
   <!--Search-->
   <string name="search_index">Otsinguindeks</string>
-  <string name="index_creation_required">Otsimiseks on vajalik indeks.\n\nIndekseid võib alla laadida indetnetist või luua otse seadmes.\n\nAllalaadimine on palju kiirem ja allalaetud indeksitel on palju rohkem funktsioone.\n\nIndeksite allalaadimiseks on vajalik internetiühendus.\n</string>
+  <string name="index_creation_required">Otsimiseks on vajalik indeks.\n\nIndekseid võib alla laadida internetist või luua otse seadmes.\n\nAllalaadimine on palju kiirem ja allalaetud indeksitel on palju rohkem funktsioone.\n\nIndeksite allalaadimiseks on vajalik internetiühendus.\n</string>
   <string name="indexing_wait_msg">Kui indekseerimine lõpetatakse, siis viiakse sind tagasi avaekraanile.</string>
   <string name="index">Indeks</string>
   <string name="index_download">Lae alla</string>
