--- a/AndBible/res/values-cy/strings.xml
+++ b/AndBible/res/values-cy/strings.xml
@@ -1,19 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<!-- Application text
- 
- @author Martin Denham [mjdenham at gmail dot com]
- @see gnu.lgpl.License for license details.<br>
-      The copyright to this program is held by it's author.
--->
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">And Bible</string>
-  <!-- Startup & Help -->
+  <!--Startup & Help-->
   <string name="splash_top_text">\"Dwedodd Duw,\'Dw i eisiau golau!\' a daeth golau i fod.\" Genesis 1:3</string>
   <string name="help_text">Gwasgwch y DDEWISLEN i weithredu Ewch i\'r bennod nesaf neu\'r flaenorol drwy ddefnyddio\'r trac-bel, D-pad neu drwy lusgo\'ch bys ar y sgrîn.</string>
   <string name="help_text_long"><b>Llywio</b> \nEwch i\'r bennod nesaf neu\'r flaenorol drwy ddefnyddio\'r trac-bel, D-pad neu drwy lusgo\'ch bys ar y sgrîn. \nMae tap dwbl yn toglo\'r Sgrîn Lawn i ffwrdd ac ymlaen.\n\n<b>Dewislen</b> \nGwasgwch y DDEWISLEN i weithredu.\n\nI lawrlwytho mwy o ddogfennau gwasgwch Dewislen/Mwy/Lawrlwytho Dogfennau \n\n<b>Siarad</b> \nGwasgu \'Siarad\' i fynd i ddeialog dechrau neu stopio darllen\n\n<b>Fy Nodyn</b> Gellir ychwanegu nodiadau drwy Fy Nodyn ar y ddewislen cyd-destun adnod. Gellir mynd i\'r rhestr lawn o nodiadau o\'r brif ddewislen.\n\n<b>Nodau Llyfr</b>\nGellir ychwanegu Nodau Llyfr drwy\'r ddewislen cyd-destun adnod. Gellir mynd i\'r Rheolwr Nodau Llyfr o\'r brif ddewislen. Mae dewislen cyd-destun y Rheolwr Nodau Llyfr yn caniatau i nodau llyfr gael eu grwpio dan labeli.\n\n<b>Chwilio</b> \nGall chwilio\'r testun gynnwys nodau fel *, ?, A, NEU, DIM (gw. \"Apache Lucene - Query Parser Syntax\" am fwy o fanylion) \n\n<b>Dewislen Cyd-destun</b>\nGwasgiad hir ar \'gweld Beibl\' i agor y ddewislen weithredu ar gyfer yr adnod gyfredol. \nGwasgiad hir ar ddogfen yn y dewisydd dogfen i\'w dileu neu weld gwybodaeth. \nGwasgiad hir ar y botwm \'yn ol\' i fynd i mewn i\'r Hanes\n</string>
   <string name="version_text">Fersiwn %s</string>
   <string name="no_sdcard_error">Rhowch gerdyn SD yn eich ffôn a dechrau And Bible eto.</string>
-  <!-- main menu -->
+  <!--main menu-->
   <string name="chooseBook">Dogfen</string>
   <string name="selectPassage">Adran</string>
   <string name="search">Dod o hyd i</string>
@@ -21,10 +15,11 @@
   <string name="history">Hanes</string>
   <string name="speak">Siarad</string>
   <string name="help">Cymorth</string>
-  <!-- Passage navigation -->
+  <!--Passage navigation-->
   <string name="choosePassageBookName">Dewis Lyfr</string>
   <string name="choosePassageChapterName">Dewis Bennod</string>
-  <!--  Search -->
+  <string name="choosePassageVerseName">Dewis adnod</string>
+  <!--Search-->
   <string name="search_index">Chwilio Mynegai</string>
   <string name="index_creation_required">Mae angen mynegai i chwilio. \nGellir lawrlwytho Mynegeion oddi ar y rhyngrwyd neu eu creu.\nMae lawrlwytho yn llawer cyflymach ac mae\'r mynegeion hynny yn fwy hyblyg wrth chwilio.\nMae angen cysylltiad rhyngrwyd i lawrlwytho Mynegeion.</string>
   <string name="indexing_wait_msg">Pan fydd y mynegeio wedi cwblhau eir â chi i\'r sgrîn chwilio.</string>
@@ -32,11 +27,12 @@
   <string name="index_download">Lawrlwytho</string>
   <string name="index_not_available_for_download">Nid yw\'r mynegai hwn ar gael i\'w lawrlwytho</string>
   <string name="index_create">Creu</string>
-  <!-- Tasks -->
+  <!--Tasks-->
   <string name="progress_status">Cynnydd</string>
   <string name="task_kill_warning">Gall y tasgau hir yma ddarfod os newidir i gymhwysiad arall cyn iddynt orffen.</string>
   <string name="no_tasks_running">Nid oes tasgau yn weithredol ar hyn o bryd.</string>
-  <!-- Search -->
+  <!--Search-->
+  <string name="search_results">Dod o hyd i\'r canlyniadau</string>
   <string name="search_words_group_prompt">Dod o hyd i adnodau</string>
   <string name="search_all_words">Pob gair</string>
   <string name="search_any_word">Unrhyw air</string>
@@ -49,36 +45,59 @@
   <string name="search_old_testament">Yr Hen Destament</string>
   <string name="search_current_book">Llyfr cyfredol</string>
   <string name="error_executing_search">Chwiliad annilys</string>
-  <!-- Preferences -->
+  <!--Preferences-->
   <string name="prefs_show_verseno_title">Rhifau adnodau</string>
   <string name="prefs_show_verseno_summary">Dangos rhifau adnodau</string>
   <string name="prefs_verse_per_line_title">Un adnod i bob llinell</string>
   <string name="prefs_verse_per_line_summary">Dangos pob adnod ar linell wahanol</string>
+  <string name="prefs_show_bookmarks_title">Dangos eicon Nod Llyfr</string>
+  <string name="prefs_show_bookmarks_summary">Dangos eicon yn yr adnodau gyda Nod Llyfr</string>
+  <string name="prefs_show_mynotes_title">Dangos eiconau Fy Nodyn</string>
+  <string name="prefs_show_mynotes_summary">Dangos eicon yn adnodau gyda Fy Nodyn</string>
   <string name="prefs_show_notes_title">Troednodiadau a chroesgyfeiriadau</string>
   <string name="prefs_show_notes_summary">Dangos troednodiadau a chroesgyfeiriadau</string>
   <string name="prefs_show_strongs_title">Dangos rhifau Strong</string>
   <string name="prefs_show_strongs_summary">Dolenni i ddiffiniadau Groeg a Hebraeg</string>
+  <string name="prefs_show_morphology_title">Codau morffolegol</string>
+  <string name="prefs_show_morphology_summary">Dangos morffoleg Groeg Robinson</string>
+  <string name="prefs_section_title_title">Teitlau Adran</string>
+  <string name="prefs_section_title_summary">Dangos teitlau adrannau tu allan i\'r canon</string>
+  <string name="prefs_red_letter_title">Llythrennau Coch</string>
+  <string name="prefs_red_letter_summary">Dangos geiriau Crist mewn coch</string>
+  <string name="prefs_tilt_to_scroll_title">Gogwyddo i sgrolio</string>
+  <string name="prefs_tilt_to_scroll_summary">Gogwyddo\'r ddyfais i sgrolio\'r dudalen</string>
   <string name="prefs_night_mode_title">Cyfrwng nos</string>
   <string name="prefs_night_mode_summary">Ar gyfer darllen yn haws yn y tywyllwch</string>
+  <string name="prefs_night_mode_automatic">Awtomatig</string>
+  <string name="prefs_navigate_to_verse_title">Llywio i\'r adnod</string>
+  <string name="prefs_navigate_to_verse_summary">Dewiswch adnod (a phennod) wrth ddewis adran</string>
   <string name="prefs_text_size_title">Maint y testun</string>
   <string name="prefs_text_size_summary">Gweld mwy neu weld yn gliriach</string>
+  <string name="prefs_text_size_sample_text">sampl o destun</string>
   <string name="prefs_interface_locale_title">Iaith y rhaglen</string>
   <string name="prefs_interface_locale_summary">Dewiswch iaith y rhyngwyneb i\'r defnyddiwr arferol</string>
   <string name="locale_change_warning">Bydd y rhaglen yn ailgychwyn i newid iaith y rhyngwyneb.</string>
-  <!-- Notes screen -->
+  <!--Notes screen-->
   <string name="no_chapter_notes">Dim nodiadau yn bodoli yn y bennod hon</string>
   <string name="no_verse_notes">Dim nodiadau i\'r adnod hon</string>
   <string name="previous">Blaenorol</string>
   <string name="next">Nesaf</string>
-  <!--  Strongs -->
+  <!--Strongs-->
   <string name="strongs">Geiriadur Strong</string>
   <string name="strongs_not_installed">Lawrlwythwch geiriaduron Hebraeg a Groeg Strong.</string>
-  <!-- Module download -->
+  <string name="all_greek_occurrences">Dangos pob un</string>
+  <string name="all_hebrew_occurrences">Dangos pob un</string>
+  <string name="no_indexed_bible_with_strongs_ref">Rhaid i chi lawrlwytho Beibl sy\'n cynnwys rhifau Strong a llwytho ei fynegai trwy Chwilio</string>
+  <string name="morph_robinson_not_installed">Lawrlwytho geiriadur \'Robinson\'s Morphological Analysis Codes\'</string>
+  <string name="strongs_toggle_button_on">botwm togl strongs ymlaen</string>
+  <string name="strongs_toggle_button_off">botwm togl strongs i ffwrdd</string>
+  <!--Module download-->
   <string name="download">Lawrlwytho Dogfennau</string>
   <string name="download_confirmation">Llwytho Beibl oddi ar y rhyngrwyd?</string>
   <string name="download_source_message">Dogfennau yn cael eu lawrlwytho o http://www.crosswire.org &amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Lawrlwytho</string>
   <string name="download_refreshing_book_list">Adnewyddu\'r rhestr dogfennau sydd ar gael</string>
+  <string name="download_refresh_book_list_menu_item">Adnewyddu</string>
   <string name="error_downloading">Gwall wrth lawrlwytho. Ydy\'ch cysylltiad rhyngrwyd yn gweithio?</string>
   <string name="no_internet_connection">Methu cysylltu â\'r rhyngrwyd</string>
   <string name="storage_space_warning">Dim digon o le i\'w storio.</string>
@@ -86,16 +105,35 @@
   <string name="wait_for_bible_not_yet">Arhoswch. Nid yw\'r Beibl wedi cwblhau ei osod.</string>
   <string name="download_complete_no_bibles">Dim Beibl wedi ei osod. Pwyswch \'yn ôl\' a cheisio eto.</string>
   <string name="too_many_jobs">Mae gormod o dasgau\'n gweithredu. Arhoswch i rai i orffen a cheisiwch eto.</string>
-  <!-- Document context menu -->
+  <string name="document_not_installed">Lawrlwythwch \'%s\'</string>
+  <!--Daily Reading Plan-->
+  <string name="rdg_plan_title">Cynllun Darllen</string>
+  <string name="rdg_plan_selector_title">Dewiswch Gynllun Darllen</string>
+  <string name="rdg_plan_day">Dydd %s</string>
+  <string name="rdg_plan_set_start_jan1">Dechrau Ion 1</string>
+  <string name="done">Iawn</string>
+  <string name="reset">Ailosod</string>
+  <string name="rdg_plan_y1ntpspr">Testament Newydd, Salmau a Diarhebion mewn blwyddyn</string>
+  <string name="rdg_plan_y1ot1nt1_chronological">Drwy\'r Beibl yn gronolegol mewn blwyddyn</string>
+  <string name="rdg_plan_y1ot1nt1_OTandNT">Drwy\'r Beibl mewn blwyddyn - HD a TN</string>
+  <string name="rdg_plan_y1ot1nt1_OTthenNT">Drwy\'r Beibl mewn blwyddyn - HD yna TN</string>
+  <string name="rdg_plan_y1ot1nt2_mcheyne">Drwy\'r Beibl mewn blwyddyn (M\'Cheyne)</string>
+  <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
+  <!--Document context menu-->
   <string name="delete">Dileu</string>
+  <string name="delete_index">Dileu mynegai chwilio</string>
   <string name="about">Am</string>
   <string name="delete_doc">Dileu %s?</string>
-  <!-- Verse context menu -->
+  <string name="delete_search_index_doc">Dileu mynegai %s?</string>
+  <!--Verse context menu-->
+  <string name="select_text">Dewis testun</string>
+  <string name="select_text_help">Llusgwch yn araf i ddewis.\nYna cyffwrdd y dewis i gopio.</string>
   <string name="notes">Troednodiadau a chyfeiriadau</string>
   <string name="copy">Copïo’r adnod hon</string>
   <string name="share_verse">Rhannu\'r adnod hon ...</string>
   <string name="share_verse_subject">Mae adnod o\'r Beibl wedi ei rhannu gyda chi drwy AndBible</string>
-  <!-- Bookmarks -->
+  <string name="compare_translations">Cymharu Cyfieithiadau</string>
+  <!--Bookmarks-->
   <string name="bookmarks">Nodau Llyfr</string>
   <string name="add_bookmark">Gosod Nod Llyfr</string>
   <string name="bookmark_added">Ychwanegwyd Nod Llyfr</string>
@@ -104,50 +142,63 @@
   <string name="assign_labels">Pennu labeli</string>
   <string name="new_label">Label newydd</string>
   <string name="new_label_prompt">Enw</string>
-  <!-- Dictionary -->
+  <!--Dictionary-->
   <string name="dictionary">Geiriadur</string>
   <string name="search_dictionary_hint">Chwilio geiriadur</string>
   <string name="dictionary_contents">Cynnwys</string>
-  <!-- General Book -->
+  <!--General Book-->
   <string name="general_book">Llyfr</string>
   <string name="general_book_contents">Cynnwys</string>
-  <!-- Speak -->
-  <!-- Speak - Bible -->
+  <!--Speak-->
+  <!--plurals tags referencing the below have been moved to untranslated_strings.xml-->
+  <!--Speak - Bible-->
+  <string name="some_chapters">%d pennod</string>
   <string name="rest_of_book">I ddiwedd y llyfr</string>
-  <!-- Speak - Commentary -->
+  <!--Speak - Commentary-->
+  <string name="some_verses">%d adnod</string>
   <string name="rest_of_chapter">I ddiwedd y bennod</string>
-  <!-- Speak - Common -->
+  <!--Speak - Dictionary and other-->
+  <string name="some_pages">%d tudalen</string>
+  <!--Speak - Common-->
   <string name="stop">Stopiwch</string>
   <string name="tts_lang_not_available">Nid yw\'r iaith ar gael.</string>
-  <!-- Document types -->
+  <string name="speak_queue">Ciw</string>
+  <string name="speak_repeat">Ailadrodd</string>
+  <!--User Notes-->
+  <string name="mynotes">Fy Nodiadau</string>
+  <string name="mynote">Fy Nodyn</string>
+  <string name="mynote_add">Ychwanegu fy nodyn</string>
+  <string name="mynote_view_edit">Fy Nodyn</string>
+  <string name="mynote_saved">Fy Nodyn wedi ei gadw</string>
+  <!--Backup and restore-->
+  <string name="backup">Cadw</string>
+  <string name="backup_success">Fy Nodiadau a Nodau Llyfr wedi eu cadw yn %s ar y cerdyn SD</string>
+  <string name="restore">Adfer</string>
+  <string name="restore_confirmation">Trosysgrifo Fy Nodiadau a Nodau Llyfr?</string>
+  <string name="restore_success">Fy Nodiadau a Nodau Llyfr wedi eu hadfer o %s ar y cerdyn SD</string>
+  <!--Document types-->
   <string name="doc_type_bible">Beibl</string>
   <string name="doc_type_commentary">Esboniad</string>
   <string name="doc_type_dictionary">Geiriadur</string>
   <string name="doc_type_book">Llyfr</string>
-  <!-- Languages -->
+  <string name="doc_type_map">Map</string>
+  <!--Languages-->
   <string name="lang_default">Diofyn</string>
-  <!-- General -->
-  <string name="error_occurred">Mae gwall wedi digwydd</string>
+  <!--General-->
   <string name="okay">OK</string>
   <string name="cancel">Canslo</string>
+  <string name="yes">Ie</string>
   <string name="no">Na</string>
+  <string name="save">Cadw</string>
   <string name="error">Gwall</string>
   <string name="more">Mwy</string>
   <string name="retry">Ceisiwch eto</string>
   <string name="please_wait">Arhoswch ...</string>
   <string name="all">Y Cwbl</string>
-  <string name="all_greek_occurrences">Dangos pob un</string>
-  <string name="all_hebrew_occurrences">Dangos pob un</string>
-  <string name="no_indexed_bible_with_strongs_ref">Rhaid i chi lawrlwytho Beibl sy\'n cynnwys rhifau Strong a llwytho ei fynegai trwy Chwilio</string>
-  <string name="delete_index">Dileu mynegai chwilio</string>
-  <string name="delete_search_index_doc">Dileu mynegai %s?</string>
-  <string name="morph_robinson_not_installed">Lawrlwytho geiriadur \'Robinson\'s Morphological Analysis Codes\'</string>
-  <string name="prefs_show_morphology_summary">Dangos morffoleg Groeg Robinson</string>
-  <string name="prefs_show_morphology_title">Codau morffolegol</string>
-  <string name="choosePassageVerseName">Dewis adnod</string>
-  <string name="prefs_navigate_to_verse_summary">Dewiswch adnod (a phennod) wrth ddewis adran</string>
-  <string name="prefs_navigate_to_verse_title">Llywio i\'r adnod</string>
-  <string name="some_chapters">%d pennod</string>
-  <string name="some_pages">%d tudalen</string>
-  <string name="some_verses">%d adnod</string>
-<string name="prefs_red_letter_summary">Dangos geiriau Crist mewn coch</string><string name="prefs_red_letter_title">Llythrennau Coch</string><string name="prefs_section_title_summary">Dangos teitlau adrannau tu allan i\'r canon</string><string name="prefs_section_title_title">Teitlau Adran</string><string name="strongs_toggle_button_off">botwm togl strongs i ffwrdd</string><string name="strongs_toggle_button_on">botwm togl strongs ymlaen</string><string name="speak_queue">Ciw</string><string name="speak_repeat">Ailadrodd</string><string name="select_text">Dewis testun</string><string name="select_text_help">Llusgwch yn araf i ddewis.\nYna cyffwrdd y dewis i gopio.</string><string name="error_no_content">Dim cynnwys ar gyfer yr adnod hon</string><string name="mynote">Fy Nodyn</string><string name="mynote_add">Ychwanegu fy nodyn</string><string name="mynote_saved">Fy Nodyn wedi ei gadw</string><string name="mynote_view_edit">Fy Nodyn</string><string name="mynotes">Fy Nodiadau</string><string name="prefs_show_mynotes_summary">Dangos eicon yn adnodau gyda Fy Nodyn</string><string name="prefs_show_mynotes_title">Dangos eiconau Fy Nodyn</string><string name="save">Cadw</string><string name="search_results">Dod o hyd i\'r canlyniadau</string><string name="error_key_not_in_document">Ddim i\'w gael yn y ddogfen</string><string name="error_page_too_large">Tudalen yn rhy fawr i\'w llwytho</string><string name="prefs_text_size_sample_text">sampl o destun</string><string name="empty_list">Dim eitemau i\'w dangos</string><string name="prefs_show_bookmarks_summary">Dangos eicon yn yr adnodau gyda Nod Llyfr</string><string name="prefs_show_bookmarks_title">Dangos eicon Nod Llyfr</string><string name="prefs_tilt_to_scroll_summary">Gogwyddo\'r ddyfais i sgrolio\'r dudalen</string><string name="prefs_tilt_to_scroll_title">Gogwyddo i sgrolio</string><string name="rdg_plan_title">Cynllun Darllen</string><string name="rdg_plan_selector_title">Dewiswch Gynllun Darllen</string><string name="rdg_plan_day">Dydd %s</string><string name="rdg_plan_set_start_jan1">Dechrau Ion 1</string><string name="done">Iawn</string><string name="reset">Ailosod</string><string name="rdg_plan_y1ntpspr">Testament Newydd, Salmau a Diarhebion mewn blwyddyn</string><string name="rdg_plan_y1ot1nt1_chronological">Drwy\'r Beibl yn gronolegol mewn blwyddyn</string><string name="rdg_plan_y1ot1nt1_OTandNT">Drwy\'r Beibl mewn blwyddyn - HD a TN</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Drwy\'r Beibl mewn blwyddyn - HD yna TN</string><string name="rdg_plan_y1ot1nt2_mcheyne">Drwy\'r Beibl mewn blwyddyn (M\'Cheyne)</string><string name="prefs_night_mode_automatic">Awtomatig</string><string name="download_refresh_book_list_menu_item">Adnewyddu</string><string name="yes">Ie</string><string name="compare_translations">Cymharu Cyfieithiadau</string><string name="doc_type_map">Map</string><string name="document_not_installed">Lawrlwythwch \'%s\'</string><string name="backup">Cadw</string><string name="backup_success">Fy Nodiadau a Nodau Llyfr wedi eu cadw yn %s ar y cerdyn SD</string><string name="restore">Adfer</string><string name="restore_confirmation">Trosysgrifo Fy Nodiadau a Nodau Llyfr?</string><string name="restore_success">Fy Nodiadau a Nodau Llyfr wedi eu hadfer o %s ar y cerdyn SD</string></resources>
+  <!--Errors-->
+  <string name="error_occurred">Mae gwall wedi digwydd</string>
+  <string name="error_no_content">Dim cynnwys ar gyfer yr adnod hon</string>
+  <string name="error_page_too_large">Tudalen yn rhy fawr i\'w llwytho</string>
+  <string name="error_key_not_in_document">Ddim i\'w gael yn y ddogfen</string>
+  <string name="empty_list">Dim eitemau i\'w dangos</string>
+</resources>
