--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -123,7 +123,7 @@
     <string name="download">Download Documents</string>
     <string name="download_confirmation">Download a bible from the internet?</string>
     <string name="download_source_message">Documents are downloaded from\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
-    <string name="download_document_confirm_prefix">"Download "</string>
+    <string name="download_document_confirm_prefix">Download</string>
     <string name="download_refreshing_book_list">Refreshing list of available documents</string>
     <string name="download_refresh_book_list_menu_item">Refresh</string>
     <string name="error_downloading">An error occurred downloading.  Please check your internet connection.</string>
