--- a/AndBible/res/values-vi/strings.xml
+++ b/AndBible/res/values-vi/strings.xml
@@ -8,9 +8,9 @@
 <resources>
     <string name="app_name">Kinh Thánh</string>
     <!-- Startup & Help -->
-    <string name="splash_top_text">"\n\"Đức Chúa Trời phán rằng: Phải có sự sáng; thì có sự sáng.\"\nSáng thế ký 1:3"</string>
-    <string name="help_text">"Nhấn phím MENU cho các lựa chọn\n\nTới chương kế tiếp hoặc trước đó bằng cách sử dụng track-ball, D-pad hoặc trượt ngang màn hình bằng ngón tay."</string>
-    <string name="help_text_long">"<b>Navigation</b>\nTới chương tiếp theo và chương trước đó bằng cách sử dụng track-ball, D-pad hoặc vuốt ngang màn hình bằng tay.\nChạm 2 lần liên tiếp để mở hoặc tắt chế độ toàn màn hình.\n<b>Menu</b> \nBấm MENU để có nhiều lựa chọn\n\nĐể tải về nhiều Kinh Thánh chọn Menu/More/Download Documents \n\n<b>Đọc</b>\nNhấn Speak để truy cập vào hộp thoại để bắt đầu hoặc ngừng đọc.\n\n<b>Ghi chú</b>\nCác ghi chú có thể được thêm vào bằng cách chạm và giữ vài giây vào màn hình, sau đó chọn Ghi chú của tôi. Danh sách các ghi chú đang tồn tại có thể truy cập thông qua Menu chính.\n<b>Đánh dấu</b>\nĐánh dấu có thể được thêm vào bằng cách chạm và giữ lâu vào màn hình, sau đó chọn Thêm đánh dấu. Quản lý các đánh dấu có thể truy cập từ menu chính. \n\n<b>Tìm kiếm</b>\nViệc tìm kiếm có thể có các kí tự đặc biệt như *,?,AND,OR,NOT (xem chi tiết tại \"Apache Lucene - Query Parser Syntax\")\n\n<b>Context Menus</b> \nNhấm lâu vào màn hình Kinh Thánh để mở context Menu.\nNhấm lâu vào Kinh Thánh để xóa hoặc xem thông tin.\nNhấn lâu nút Back để truy cập vào Lịch sử."</string>
+    <string name="splash_top_text">\n\"Đức Chúa Trời phán rằng: Phải có sự sáng; thì có sự sáng.\"\nSáng thế ký 1:3</string>
+    <string name="help_text">Nhấn phím MENU cho các lựa chọn\n\nTới chương kế tiếp hoặc trước đó bằng cách sử dụng track-ball, D-pad hoặc trượt ngang màn hình bằng ngón tay.</string>
+    <string name="help_text_long"><b>Navigation</b>\nTới chương tiếp theo và chương trước đó bằng cách sử dụng track-ball, D-pad hoặc vuốt ngang màn hình bằng tay.\nChạm 2 lần liên tiếp để mở hoặc tắt chế độ toàn màn hình.\n<b>Menu</b> \nBấm MENU để có nhiều lựa chọn\n\nĐể tải về nhiều Kinh Thánh chọn Menu/More/Download Documents \n\n<b>Đọc</b>\nNhấn Speak để truy cập vào hộp thoại để bắt đầu hoặc ngừng đọc.\n\n<b>Ghi chú</b>\nCác ghi chú có thể được thêm vào bằng cách chạm và giữ vài giây vào màn hình, sau đó chọn Ghi chú của tôi. Danh sách các ghi chú đang tồn tại có thể truy cập thông qua Menu chính.\n<b>Đánh dấu</b>\nĐánh dấu có thể được thêm vào bằng cách chạm và giữ lâu vào màn hình, sau đó chọn Thêm đánh dấu. Quản lý các đánh dấu có thể truy cập từ menu chính. \n\n<b>Tìm kiếm</b>\nViệc tìm kiếm có thể có các kí tự đặc biệt như *,?,AND,OR,NOT (xem chi tiết tại \"Apache Lucene - Query Parser Syntax\")\n\n<b>Context Menus</b> \nNhấm lâu vào màn hình Kinh Thánh để mở context Menu.\nNhấm lâu vào Kinh Thánh để xóa hoặc xem thông tin.\nNhấn lâu nút Back để truy cập vào Lịch sử.</string>
     <string name="version_text">Phiên bản %s</string>
     <string name="no_sdcard_error">Gắn thẻ nhớ vào sau đó khởi động lại chương trình.</string>
 
@@ -30,7 +30,7 @@
 
     <!--  Search -->
     <string name="search_index">Tìm Chỉ Mục</string>
-    <string name="index_creation_required">"Một chỉ mục được yêu cầu để tìm kiếm.\n\nCác chỉ mục có thể được tải về từ internet hoặc được tạo trên máy của bạn.\n\nViệc tải về thì nhanh hơn nhiều và hỗ trợ nhiều tính năng tìm kiếm hơn.\n\nKết nối internet được yêu cầu để tải các chỉ mục."</string>
+    <string name="index_creation_required">Một chỉ mục được yêu cầu để tìm kiếm.\n\nCác chỉ mục có thể được tải về từ internet hoặc được tạo trên máy của bạn.\n\nViệc tải về thì nhanh hơn nhiều và hỗ trợ nhiều tính năng tìm kiếm hơn.\n\nKết nối internet được yêu cầu để tải các chỉ mục.</string>
     <string name="indexing_wait_msg">Sau khi việc lập chỉ mục hoàn thành, bạn sẽ được chuyển sang màn hình tìm kiếm.</string>
     <string name="index">Chỉ Mục</string>
     <string name="index_download">Tải Xuống</string>
@@ -110,7 +110,7 @@
     <string name="download">Tải về các tài liệu</string>
     <string name="download_confirmation">Tải Kinh Thánh từ internet?</string>
     <string name="download_source_message">Kinh Thánh được tải về từ\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
-    <string name="download_document_confirm_prefix">"Tải về"</string>
+    <string name="download_document_confirm_prefix">Tải về</string>
     <string name="download_refreshing_book_list">Làm mới danh sách các tài liệu có sẵn</string>
     <string name="download_refresh_book_list_menu_item">Làm mới</string>
     <string name="error_downloading">Có lỗi xảy ra khi đang tải. Hãy kiểm tra lại kết nối internet của ban.</string>
